--- a/tricorder/CMakeLists.txt
+++ b/tricorder/CMakeLists.txt
@@ -3,8 +3,9 @@ cmake_minimum_required(VERSION 3.16)
 project(tricorder VERSION 0.1 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(QT_QML_GENERATE_QMLLS_INI ON)
 
-find_package(Qt6 REQUIRED COMPONENTS Quick)
+find_package(Qt6 REQUIRED COMPONENTS Core Gui Mqtt Qml Quick)
 
 qt_standard_project_setup(REQUIRES 6.8)
 
@@ -12,10 +13,16 @@ qt_add_executable(apptricorder
     main.cpp
 )
 
+set_source_files_properties(Utils.qml
+    PROPERTIES QT_QML_SINGLETON_TYPE TRUE)
+
 qt_add_qml_module(apptricorder
     URI tricorder
     QML_FILES
         Main.qml
+        Utils.qml
+    SOURCES
+        qmlmqttclient.cpp qmlmqttclient.h
 )
 
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
@@ -30,7 +37,7 @@ set_target_properties(apptricorder PROPERTIES
 )
 
 target_link_libraries(apptricorder
-    PRIVATE Qt6::Quick
+    PRIVATE Qt6::Quick Qt6::Mqtt
 )
 
 include(GNUInstallDirs)
