feature: added SwipeView with TabBar indicator for screen navigation
* Added missions screen with just a text
* Slight adjustments on styling

--- a/tricorder/CMakeLists.txt
+++ b/tricorder/CMakeLists.txt
@@ -20,6 +20,7 @@ qt_add_qml_module(apptricorder
     QML_FILES
         Main.qml
         SuitData.qml
+        Missions.qml
         Style.qml
         Env.qml
     RESOURCES
