build: added features base files
* Using same theme as tricorder

--- a/mgsthelmet/CMakeLists.txt
+++ b/mgsthelmet/CMakeLists.txt
@@ -5,7 +5,7 @@ project(mgsthelmet VERSION 0.1 LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(QT_QML_GENERATE_QMLLS_INI ON)
 
-find_package(Qt6 REQUIRED COMPONENTS Quick)
+find_package(Qt6 REQUIRED COMPONENTS Core Quick QuickControls2)
 
 qt_standard_project_setup(REQUIRES 6.8)
 
@@ -13,10 +13,19 @@ qt_add_executable(appmgsthelmet
     main.cpp
 )
 
+set_source_files_properties(Env.qml Style.qml
+    PROPERTIES QT_QML_SINGLETON_TYPE TRUE)
+
 qt_add_qml_module(appmgsthelmet
     URI mgsthelmet
     QML_FILES
         Main.qml
+        SuitLevels.qml
+        Warnings.qml
+        Env.qml
+        Style.qml
+        NextTask.qml
+        CurrentMission.qml
 )
 
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
@@ -31,7 +40,7 @@ set_target_properties(appmgsthelmet PROPERTIES
 )
 
 target_link_libraries(appmgsthelmet
-    PRIVATE Qt6::Quick
+    PRIVATE Qt6::Quick Qt6::Core Qt6::QuickControls2
 )
 
 include(GNUInstallDirs)
