Envio de todas as mudanças

--- a/tricorder/CMakeLists.txt
+++ b/tricorder/CMakeLists.txt
@@ -4,7 +4,7 @@ project(tricorder VERSION 0.1 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(Qt6 REQUIRED COMPONENTS Quick IntermixControls)
+find_package(Qt6 REQUIRED COMPONENTS Quick)
 
 qt_standard_project_setup(REQUIRES 6.8)
 
@@ -20,19 +20,17 @@ qt_add_qml_module(apptricorder
     QML_FILES
         Main.qml
         SuitData.qml
-        Missions.qml
+        MissionScreen.qml
         Style.qml
         Env.qml
     RESOURCES
         fonts/Silkscreen/Silkscreen-Regular.ttf
         fonts/Silkscreen/Silkscreen-Bold.ttf
+        QML_FILES MissionTasks.qml
+        QML_FILES TimerPanel.qml
 )
 
-# Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
-# If you are developing for iOS or macOS you should consider setting an
-# explicit, fixed bundle identifier manually though.
 set_target_properties(apptricorder PROPERTIES
-#    MACOSX_BUNDLE_GUI_IDENTIFIER com.example.apptricorder
     MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
     MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
     MACOSX_BUNDLE TRUE
@@ -43,13 +41,10 @@ target_link_libraries(apptricorder
     PRIVATE Qt6::Quick
 )
 
-if(ANDROID OR IOS)
-    # Intermix Controls plugin's initializeEngine() is not invoked in iOS
-    target_link_libraries(emile PRIVATE Qt6::IntermixControls Qt6::Multimedia)
-    if(IOS)
-        qt_add_ios_ffmpeg_libraries(emile)
-    endif()
-endif()
+# Para Android/iOS, somente se quiser Multimedia
+#if(ANDROID OR IOS)
+#    target_link_libraries(apptricorder PRIVATE Qt6::Multimedia)
+#endif()
 
 include(GNUInstallDirs)
 install(TARGETS apptricorder
