--- a/tricorder/CMakeLists.txt
+++ b/tricorder/CMakeLists.txt
@@ -4,7 +4,7 @@ project(tricorder VERSION 0.1 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(Qt6 REQUIRED COMPONENTS Core Quick IntermixControls QuickControls2)
+find_package(Qt6 REQUIRED COMPONENTS Quick IntermixControls QuickControls2 Mqtt)
 
 qt_standard_project_setup(REQUIRES 6.8)
 
@@ -24,6 +24,8 @@ qt_add_qml_module(apptricorder
         Style.qml
         Env.qml
         SuitDataPane.qml
+    SOURCES
+        qmlmqttclient.cpp qmlmqttclient.h
     RESOURCES
         fonts/Silkscreen/Silkscreen-Regular.ttf
         fonts/Silkscreen/Silkscreen-Bold.ttf
@@ -41,7 +43,7 @@ set_target_properties(apptricorder PROPERTIES
 )
 
 target_link_libraries(apptricorder
-    PRIVATE Qt6::Quick Qt6::Core Qt6::QuickControls2
+    PRIVATE Qt6::Quick Qt6::Core Qt6::QuickControls2 Qt6::Mqtt
 )
 
 if(ANDROID OR IOS)
